--- a/pages/ui-foundation.html
+++ b/pages/ui-foundation.html
@@ -36,7 +36,7 @@
     <h2>Accessibility</h2>
     <ul>
       <li>
-        Interactive elements support keyboard navigation: Tab to move forward, Shift + Tab to move backward, Enter or Space to trigger actions, and arrow keys where contextually relevant (e.g., in tabs, menus, sliders).
+        Interactive elements support keyboard navigation: Tab to move forward, Shift + Tab to move backward, Enter or Space to trigger actions, and arrow keys where contextually relevant (e.g., in tabs, sliders).
       </li>
     </ul>
   </div>
