--- a/pages/ui-icons.html
+++ b/pages/ui-icons.html
@@ -25,7 +25,7 @@
 <script>
   requestAnimationFrame(()=>{
     const icons = [
-      'home','article','search','send','notifications','settings','check','close','arrow-down-small','arrow-up-small'
+      'home','article','search','send','notifications','settings','check','close','spinner','arrow-down-small','arrow-up-small','arrow-left-small','arrow-right-small','add','info','warning','success','error'
     ];
 
     const container = document.querySelector('.content .icons');
