--- a/ui/ui-separator/ui-separator.html
+++ b/ui/ui-separator/ui-separator.html
@@ -2,13 +2,10 @@
   <h1>Separator</h1>
   <div class="description">A component for visually separating content with a line.</div>
   <div class="info">
-    <h2>Usage</h2>
+    <h2>Info</h2>
     <ul>
       <li>
-        Any content added inside the component should be wrapped in a &lt;span&gt; to ensure proper rendering.
-      </li>
-      <li>
-        When using non-text content (e.g., icons or custom elements), additional CSS may be required to ensure correct styling.
+        This component will become obsolete once <a href="https://www.w3.org/TR/css-gaps-1/" target="_blank">CSS Gaps Decorations Module Level 1</a> is fully implemented across all major browsers.
       </li>
     </ul>
   </div>
@@ -16,10 +13,7 @@
     <h2>Features</h2>
     <ul>
       <li>
-        By default, a horizontal separator has a width of 100%.
-      </li>
-      <li>
-        By default, a vertical separator has a height of 100%.
+        Separators default to 100% size along their orientation axis.
       </li>
     </ul>
   </div>
@@ -30,6 +24,10 @@
         orientation - static (optional). Default: horizontal.<br>
         Available options: horizontal, vertical.<br>
         Defines the separator direction.
+      </li>
+      <li>
+        size - static (optional). Default: default.<br>
+        Specifies the component's size (extendable via CSS).
       </li>
       <li>
         theme - static (optional). Default: default.<br>
