--- a/ui/ui-button/ui-button.html
+++ b/ui/ui-button/ui-button.html
@@ -190,7 +190,7 @@
     <div>Disabled</div>
     <div class="example">
       <div class="preview">
-        <ui-button disabled>
+        <ui-button id="s" disabled>
           Button
         </ui-button>
       </div>
