--- a/ui/ui-button/ui-button.html
+++ b/ui/ui-button/ui-button.html
@@ -23,6 +23,10 @@
         Must be set manually.
       </li>
       <li>
+        type - static (inin only, optional).<br>
+        Controls the disabled state of the component.
+      </li>
+      <li>
         disabled - reactive (optional).<br>
         Controls the disabled state of the component.
       </li>
