--- a/pages/ui-foundation.html
+++ b/pages/ui-foundation.html
@@ -1,7 +1,9 @@
 <section class="intro">
   <h1>Foundation</h1>
   <div class="description">Key fundamental capabilities of the UI library.</div>
-  <ui-divider></ui-divider>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Architecture</h2>
     <ul>
