--- a/ui/ui-alert/ui-alert.html
+++ b/ui/ui-alert/ui-alert.html
@@ -1,6 +1,9 @@
 <section class="intro">
   <h1>Alert</h1>
   <div class="description">Displays a message that draws the user's attention.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Usage</h2>
     <ul>
@@ -115,7 +118,7 @@
     <div class="example">
       <div class="preview">
         <ui-alert icon="info">
-          <alert-title>Update Complete</alert-title>
+          <alert-title>Update Complete Your settings have been Your settings have been</alert-title>
           <alert-description>Your settings have been <strong>successfully</strong> saved.</alert-description>
         </ui-alert>
       </div>
