--- a/ui/ui-checkbox/ui-checkbox.html
+++ b/ui/ui-checkbox/ui-checkbox.html
@@ -1,6 +1,9 @@
 <section class="intro">
   <h1>Checkbox</h1>
   <div class="description">Checkboxes allow users to select multiple items from a list or toggle a single option on or off.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Attributes</h2>
     <ul>
