--- a/ui/ui-field/ui-field.html
+++ b/ui/ui-field/ui-field.html
@@ -1,6 +1,9 @@
 <section class="intro">
   <h1>Field</h1>
   <div class="description">The Field component groups a label with a form control.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Usage</h2>
     <ul>
