--- a/ui/ui-portal/ui-portal.html
+++ b/ui/ui-portal/ui-portal.html
@@ -1,6 +1,9 @@
 <section class="intro">
   <h1>Portal</h1>
   <div class="description">A root-level DOM node for modals, overlays, and dialogs.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Usage</h2>
     <ul>
