--- a/pages/ui-icons.html
+++ b/pages/ui-icons.html
@@ -1,7 +1,9 @@
 <section class="intro">
   <h1>Icons</h1>
   <div class="description">A collection of icons.</div>
-  <ui-divider></ui-divider>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Design Details</h2>
     <ul>
