--- a/ui/ui-accordion/ui-accordion.html
+++ b/ui/ui-accordion/ui-accordion.html
@@ -1,6 +1,9 @@
 <section class="intro">
   <h1>Accordion</h1>
   <div class="description">Accordion toggles collapsible content sections.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Attributes</h2>
     <ul>
