--- a/ui/ui-breadcrumb/ui-breadcrumb.html
+++ b/ui/ui-breadcrumb/ui-breadcrumb.html
@@ -1,6 +1,9 @@
 <section class="intro">
   <h1>Breadcrumb</h1>
   <div class="description">Breadcrumbs show the current page's location within a navigational hierarchy and allow users to navigate to parent pages.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Attributes</h2>
     <ul>
@@ -15,7 +18,7 @@
 <section class="content">
 
   <div class="content-item">
-    <div>Start</div>
+    <div>Text only</div>
     <div class="example">
       <div class="preview">
         <ui-breadcrumb id="ex1"></ui-breadcrumb>
@@ -46,7 +49,7 @@
   </div>
 
   <div class="content-item">
-    <div>Start</div>
+    <div>Text with icons</div>
     <div class="example">
       <div class="preview">
         <ui-breadcrumb id="ex2"></ui-breadcrumb>
