--- a/ui/ui-button/ui-button.html
+++ b/ui/ui-button/ui-button.html
@@ -1,6 +1,9 @@
 <section class="intro">
   <h1>Button</h1>
   <div class="description">Buttons are used to perform actions or submit forms.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Usage</h2>
     <ul>
