--- a/ui/ui-focus/ui-focus.html
+++ b/ui/ui-focus/ui-focus.html
@@ -1,6 +1,9 @@
 <section class="intro">
   <h1>Focus</h1>
   <div class="description">A root-level DOM node used to capture focus.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Usage</h2>
     <ul>
