--- a/ui/ui-icon/ui-icon.html
+++ b/ui/ui-icon/ui-icon.html
@@ -1,6 +1,9 @@
 <section class="intro">
   <h1>Icon</h1>
   <div class="description">A component for displaying an icon.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Features</h2>
     <ul>
