--- a/ui/ui-input/ui-input.html
+++ b/ui/ui-input/ui-input.html
@@ -1,6 +1,9 @@
 <section class="intro">
   <h1>Input</h1>
   <div class="description">Input allows users to enter and edit text.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Usage</h2>
     <ul>
