--- a/ui/ui-label/ui-label.html
+++ b/ui/ui-label/ui-label.html
@@ -1,6 +1,9 @@
 <section class="intro">
   <h1>Label</h1>
   <div class="description">A label provides accessible, descriptive text for a user interface control.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Usage</h2>
     <ul>
