--- a/ui/ui-listbox/ui-listbox.html
+++ b/ui/ui-listbox/ui-listbox.html
@@ -1,10 +1,13 @@
 <section class="intro">
   <h1>Listbox</h1>
   <div class="description">.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>.</li>
+      <li></li>
     </ul>
   </div>
   <div class="info">
