--- a/ui/ui-select/ui-select.html
+++ b/ui/ui-select/ui-select.html
@@ -1,6 +1,9 @@
 <section class="intro">
   <h1>Select</h1>
   <div class="description">A Select is a component that lets the user choose a single option from a list of multiple choices.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Attributes</h2>
     <ul>
