--- a/ui/ui-separator/ui-separator.html
+++ b/ui/ui-separator/ui-separator.html
@@ -1,6 +1,9 @@
 <section class="intro">
   <h1>Separator</h1>
   <div class="description">A component for visually separating content with a line.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Info</h2>
     <ul>
