--- a/ui/ui-spinner/ui-spinner.html
+++ b/ui/ui-spinner/ui-spinner.html
@@ -1,6 +1,9 @@
 <section class="intro">
   <h1>Spinner</h1>
   <div class="description">A visual indicator of loading or processing.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Features</h2>
     <ul>
