--- a/ui/ui-switch/ui-switch.html
+++ b/ui/ui-switch/ui-switch.html
@@ -1,6 +1,9 @@
 <section class="intro">
   <h1>Switch</h1>
   <div class="description">Switches provide a simple and user-friendly way to toggle between two states.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Attributes</h2>
     <ul>
