--- a/ui/ui-tabs/ui-tabs.html
+++ b/ui/ui-tabs/ui-tabs.html
@@ -1,6 +1,9 @@
 <section class="intro">
   <h1>Tabs</h1>
   <div class="description">Tabs organize content into separate panels that users can switch between.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Attributes</h2>
     <ul>
