--- a/ui/ui-text/ui-text.html
+++ b/ui/ui-text/ui-text.html
@@ -1,6 +1,9 @@
 <section class="intro">
   <h1>Text</h1>
   <div class="description">Standardizes and ensures consistent text styling.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Features</h2>
     <ul>
