--- a/ui/ui-textarea/ui-textarea.html
+++ b/ui/ui-textarea/ui-textarea.html
@@ -1,6 +1,9 @@
 <section class="intro">
   <h1>Textarea</h1>
   <div class="description">Textarea allows users to enter and edit multiline text.</div>
+</section>
+
+<section class="details">
   <div class="info">
     <h2>Usage</h2>
     <ul>
