--- a/ui/ui-icon/ui-icon.html
+++ b/ui/ui-icon/ui-icon.html
@@ -32,7 +32,7 @@
       </div>
       <div class="toolbar">
         <span>HTML</span>
-        <ui-button size="slim-text" theme="transparent" onclick="changeIconName()">REACTIVITY TEST</ui-button>
+        <ui-button size="slim" theme="transparent" onclick="changeIconName()">REACTIVITY TEST</ui-button>
       </div>
       <div class="code">
         <code>
